frontend/src/style/pages/home.css
#home-page {
    gap: 30px;
    position: relative;
    align-items: center;
    justify-content: flex-start;
    background: linear-gradient(var(--base), var(--secondary-7));
}
#home-page .headline {
    margin: 40px;
    color: var(--primary-1);
    transition: all 200ms ease;
} #home-page .headline:hover { color: var(--secondary-1); }

#xplore, #public-rooms, #welcome {
    width: min(70vw, 600px);
    min-width: 450px;
    display: flex;
    flex-direction: column;
    border-radius: var(--border-radius-lg);
    transition: all 300ms ease;
}
#xplore {
    min-height: 220px;
    gap: 35px;
    align-items: center;
    padding: 50px 20px 0px 0px;
    background: linear-gradient(var(--primary-7), var(--secondary-7));
}

#xplore .btn {
    width: 200px;
    height: 75px;
    font-size: larger;
    gap: 20px;
}
#xplore .icon { font-size: 26px; }
#xplore .btn-primary { scale: 1.4; }
/* #xplore .btn-tertiary { background-color: transparent;} */

#xplore .btn:hover {
    background-color: var(--primary-4);
    transform: translateY(-3px);
    box-shadow: 2px 2px 5px var(--secondary-2);
}
#xplore:hover {
    scale: 1.01;
    box-shadow: 0 0 10px 0 var(--secondary-2);
}

/* Public Rooms Section */
#public-rooms {
    min-height: 50px;
    max-height: 200px;
    gap: 5px;
    padding: 15px;
    background-color: var(--secondary-7);
    overflow-y: scroll;
}

#public-rooms::-webkit-scrollbar { width: 5px; }

#public-rooms::-webkit-scrollbar-track { background: transparent; }
#public-rooms::-webkit-scrollbar-thumb {
    background-color: transparent;
    border-radius: 20px;
    transition: background-color 200ms ease;
}
#public-rooms:hover::-webkit-scrollbar-thumb { background-color: var(--secondary-6); }

#public-rooms .header { position: relative; }
#public-rooms .header .members {
    position: absolute;
    top: 0;
    right: 70px;
}
#public-rooms .header .members, #public-rooms .room .members {
    width: 70px;
    color: var(--success);
    border-radius: var(--border-radius-sm);
}

#public-rooms .options {
    gap: 5px;
    top: 0;
    right: 0px;
    position: absolute;
    background-color: transparent;
}
#public-rooms .btn-mini {
    height: 28px;
    width: 28px;
    background-color: var(--primary-5);
}

#public-rooms .room {
    padding-top: 5px;
    margin: 5px 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 10px;
    border-top: 1px solid var(--gray-200);
}
#public-rooms .room .btn-mini {
    width: 100px;
    color: var(--secondary-4);
    background-color: transparent;
    font-size: larger;
}
#public-rooms .room .btn-mini:hover {
    color: var(--text-primary);
    background-color: var(--secondary-4);
}

